--- a/contact-me.html
+++ b/contact-me.html
@@ -14,7 +14,7 @@
         <input type="text" name="yourName"><br>
         <label>Your email:</label>
         <input type="email" name="yourEmail"><br>
-        <label>Your Message:</label>
+        <label>Your Message:</label><br>
         <textarea name="yourMessage" id="" cols="30" rows="10"></textarea>
         <label>Do you want to be notified when the app is available?</label>
         <input type="checkbox"><br>
