--- a/contact-me.html
+++ b/contact-me.html
@@ -12,12 +12,16 @@
     <form action="mailto:renato.fraga@iosdev.studio" method="post" enctype="text/plain">
         <label>Your name:</label>
         <input type="text" name="yourName"><br>
+        <br>
         <label>Your email:</label>
         <input type="email" name="yourEmail"><br>
+        <br>
         <label>Your Message:</label><br>
-        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea>
+        <textarea name="yourMessage" id="" cols="50" rows="5"></textarea><br>
+        <br>
         <label>Do you want to be notified when the app is available?</label>
-        <input type="checkbox"><br>
+        <input type="checkbox" name="notification"><br>
+        <br>
         <input type="submit"><br>
 
     </form>
